--- a/src/app/components/features/features.scss
+++ b/src/app/components/features/features.scss
@@ -2,6 +2,7 @@
 .features {
   padding: var(--section-padding) 24px;
   position: relative;
+  overflow: hidden;
 }
 
 .container {
