--- a/src/app/components/pricing/pricing.scss
+++ b/src/app/components/pricing/pricing.scss
@@ -1,6 +1,7 @@
 .pricing {
   padding: var(--section-padding) 24px;
   position: relative;
+  overflow: hidden;
 }
 
 .container {
